# ffreis-runner-comparison

./: .gitignore  .gitleaks.toml  AGENTS.md  Makefile  README.md  SECURITY.md  agents.md  lefthook.yml  pyproject.toml  renovate.json  sonar-project.properties
.github/workflows/: actionlint.yml  build-all.yml  code-review.yml  coverage.yml  devops-automation.yml  devops-pr-hygiene.yml  devops-security.yml  fmt.yml  gitleaks.yml  grype-fs.yml  labeler.yml  lefthook-complex.yml  lint.yml  lock-sync.yml  mutation.yml  release-please.yml  scorecard.yml  secret-scan.yml  security.yml  semantic-pr.yml  semgrep.yml  shellcheck.yml  stale.yml  tests.yml  trivy-fs.yml
orchestrator/: __init__.py  main.py  startup.py  wait_ready.py
scripts/: bootstrap_lefthook.sh
scripts/hooks/: check_commit_msg.sh  check_required_tools.sh
scripts/lib/: common.sh
tests/: test_deterministic_runner.py  test_smoke.py
workloads/grpc/: ghz_runner.py
workloads/http/: __init__.py  deterministic_runner.py
workloads/hypothesis/: parity_props.py  strategies.py
workloads/locust/: locustfile_http.py
