[project]
name = "ffreis-onnx-runner-comparison"
version = "0.1.0"
description = "Parity and performance harness for Python vs Rust ONNX serving"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "hypothesis>=6.0.0",
  "locust>=2.32.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "mutmut>=2.0.0",
  "pre-commit>=3.7.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "types-PyYAML>=6.0.12.20240917",
]

[project.scripts]
onnx-runner-compare = "orchestrator.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers -ra"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "venv", "__pycache__", "artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disable_error_code = ["arg-type"]
exclude = "(^\\.venv/|^artifacts/)"
files = ["orchestrator", "tests", "workloads"]
